# proto-example

./: CMakeLists.txt  README.md  docker-compose.yml
api/proto/: message.proto
cmd/: CMakeLists.txt
cmd/src/: main.cpp
deployments/: Dockerfile
pkg/: CMakeLists.txt
pkg/src/: UseMessage.cpp  UseMessage.h
scripts/: build.sh
